--- a/templates/_fulcrum-premium-finance/_singles/_landingpage.twig
+++ b/templates/_fulcrum-premium-finance/_singles/_landingpage.twig
@@ -2,7 +2,7 @@
 
 {% block content %}
 
-<!-- Landing page header section -->
+<!-- Landing page section one HEADER -->
 <div id="lp_header-section" class="main-header">
     <div class="section">
         <div class="row">
@@ -19,7 +19,7 @@
                 </div>
     
 
-                <!-- Main header texty  -->
+                <!-- Main header text  -->
                 <div class="lp-header-text">
                     <h5 class="tagline">South Africa’s trusted provider of insurance Premium Financing</h5>
                     <h1 class="heading-text">The seamless solution for businesses with annual insurance to preserve cash flow.<h1>
@@ -54,7 +54,7 @@
     </div>
 </div>
 
-<!-- Landing page section two -->
+<!-- Landing page section BENEFITS -->
 <div id="lp_section-two" class="section">
     <div class="section">
 
@@ -74,12 +74,202 @@
                         <img class="benefit-icon" src=""/>
                         <p class="benfit-text"></p>
                     </div>
-</div>
-</div>
-</div>
-</div>
+
+                    <!-- Benefits Point Two -->
+                    <div class="benefit-container benefit-2">
+                        <img class="benefit-icon" src=""/>
+                        <p class="benfit-text"></p>
+                    </div>
+
+                    <!-- Benefits Point One -->
+                    <div class="benefit-container benefit-3">
+                        <img class="benefit-icon" src=""/>
+                        <p class="benfit-text"></p>
+                    </div>
+
+                    <!-- Benefits Point One -->
+                    <div class="benefit-container benefit-4">
+                        <img class="benefit-icon" src=""/>
+                        <p class="benfit-text"></p>
+                    </div>
+                
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
 
+
+<!-- Landing page section three TESTIMONIALw-->
+<div id="lp_section-four" class="section-grad">
+    <div class="section">
+        <div class="row">
+
+            <!--Testimonial-->
+            <div class="testimonial">
+                <div class="testimonial-container">
+                    <h2 class="testimonial-quote"></h2>
+                    <h5 class="testimonial-name"></h5>
+                    <p class="testimonial-job-description"></p>
+                </div>
+            </div>
+
+            <!-- Client logo Carousel -->
+            <div class="client-logo-carousel">
+                <div class="Carousel-container">
+                </div>
+            </div>    
+        
+        </div>
+    </div>        
+</div>
+
+<!-- Landing page section four WHY USE US-->
+<div id="lp_section-four" class="section">
+    <div class="section">
+        
+        <div class="row">
+            <!-- Why use us heading-->
+            <div class="why-use-us">
+                <h2 class="Why-use-us-heading"></h2>
+                <p class="Why-use-use-text"></p>
+            </div>           
+        </div>
+
+        <div class="row">
+
+            <!-- Reason one -->
+            <div class="reason-container col-md-4">
+                <div id="reason-one">
+                    <h4 class="reason-subheading"></h4>
+                    <h2 class="reason-heading"></h2>
+                    <hr class="reason-hr"/>
+                    <p class="reason-text"></p>
+                </div>     
+            </div>
+
+            <!-- Reason two -->
+            <div class="reason-container col-md-4">
+                <div id="reason-two">
+                    <h4 class="reason-subheading"></h4>
+                    <h2 class="reason-heading"></h2>
+                    <hr class="reason-hr"/>
+                    <p class="reason-text"></p>
+                </div>     
+            </div>
+
+            <!-- Reason three -->
+            <div class="reason-container col-md-4">
+                <div id="reason-three">
+                    <h4 class="reason-subheading"></h4>
+                    <h2 class="reason-heading"></h2>
+                    <hr class="reason-hr"/>
+                    <p class="reason-text"></p>
+                </div>     
+            </div>
+
+        </div>   
+
+    </div>  
+</div>
+
+
+
+<!-- Landing page section four WHY USE US-->
+<div id="lp_section-four" class="section">
+    <div class="section">
+        
+        <div class="row">
+            <!-- Why use us heading-->
+            <div class="why-use-us">
+                <h2 class="Why-use-us-heading"></h2>
+                <p class="Why-use-use-text"></p>
+            </div>           
+        </div>
+
+        <div class="row">
+
+            <!-- Reason one -->
+            <div class="reason-container col-md-4">
+                <div id="reason-one">
+                    <h4 class="reason-subheading"></h4>
+                    <h2 class="reason-heading"></h2>
+                    <hr class="reason-hr"/>
+                    <p class="reason-text"></p>
+                </div>     
+            </div>
+
+            <!-- Reason two -->
+            <div class="reason-container col-md-4">
+                <div id="reason-two">
+                    <h4 class="reason-subheading"></h4>
+                    <h2 class="reason-heading"></h2>
+                    <hr class="reason-hr"/>
+                    <p class="reason-text"></p>
+                </div>     
+            </div>
+
+            <!-- Reason three -->
+            <div class="reason-container col-md-4">
+                <div id="reason-three">
+                    <h4 class="reason-subheading"></h4>
+                    <h2 class="reason-heading"></h2>
+                    <hr class="reason-hr"/>
+                    <p class="reason-text"></p>
+                </div>     
+            </div>
+
+        </div>   
+
+    </div>  
+</div>
+
+<!-- Landing page section five FINAL PITCH-->
+<div id="lp_section-five" class="section-grey">
+    <div class="section">
+        <div class="row">
+            
+            <!-- Final Pitch text -->
+            <div class="final-pitch-container">
+                <h2 class="heading"></h2>
+                <p class="text"></p>
+                <a class="standard-btn" href=""></a>
+            </div>
+        
+        </div>
+    </div>
+</div>
+
+
+<!-- Landing page FOOTER -->
+<div id="ladningpage-footer" class="section-grad">
+    <div class="section">
+        <div class="row">
+            <div class="landingpage-footer-container">
+                
+                <!-- LP footer left-side LOGO -->
+                <div class="left-lp-footer-col col-md-2">
+                    <a class="lp-footer-logo" href=""><img src="" ></a>
+                    <p class="lp-footer-text"></p>
+                </div>
+
+
+                <!-- LP footer right-side SOCIAL MEDIA ICONS -->
+                <div class="right-lp-footer-col col-md-2">
+                    <p class="lp-footer-right-heading">
+                    <div class="lp-footer-social-media-icons-container">
+                        <a id="lp-footer-instagram" class="lp-footer-social-icon"><img src=""></a>
+                        <a id="lp-footer-facebook" class="lp-footer-social-icon"><img src=""></a>
+                        <a id="lp-footer-twitter" class="lp-footer-social-icon"><img src=""></a>
+                        <a id="lp-footer-youtube" class="lp-footer-social-icon"><img src=""></a>
+                        <a id="lp-footer-linkedin" class="lp-footer-social-icon"><img src=""></a>
+                    </div>
+                </div> 
+       
+            </div>
+        </div>
+    </div>
+</div>
 
 {% endblock %}
 
