--- a/templates/_layout.twig
+++ b/templates/_layout.twig
@@ -5,10 +5,13 @@
     <meta charset="utf-8"/>
     <title>{{ siteName }}</title>
     <meta content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover" name="viewport">
-    <link rel="stylesheet" type="text/css" href="/assets/scripts/styles.css">
+    <link rel="stylesheet" type="text/css" href="/web/assets/scripts/styles.css">
     <script src="https://code.jquery.com/jquery-2.2.0.min.js" type="text/javascript"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick.js"></script>
-    <script src="/assets/scripts/main.js" type="text/javascript"></script>
+    <link rel="stylesheet" href="https://use.typekit.net/fyu1tcm.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+    <script src="/web/assets/scripts/main.js" type="text/javascript"></script>
+
   </head>
   <body>
       {% block content %}
