--- a/templates/_layout.twig
+++ b/templates/_layout.twig
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="https://use.typekit.net/fyu1tcm.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
     <script src="/web/assets/scripts/main.js" type="text/javascript"></script>
-
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.0.0/animate.min.css" />
   </head>
   <body>
       {% block content %}
